# kraken

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/audio/: CMakeLists.txt  HTTP_STREAMING.md  README.md  TROUBLESHOOTING.md  audio_service.c
components/audio/include/kraken/: audio_service.h
components/bluetooth/: CMakeLists.txt  bt_profiles.c  bt_service.c
components/bluetooth/include/kraken/: bt_profiles.h  bt_service.h
components/bsp/: CMakeLists.txt  bsp.c
components/bsp/include/kraken/: bsp.h
components/display/: BOOT_ANIMATION.md  CMakeLists.txt  MODULAR_API.md  NETWORK_SUBMENU.md  UI_ARCHITECTURE.md  display_service.c
components/display/include/kraken/: display_service.h  ui_api.h  ui_bluetooth.h  ui_manager.h  ui_menu.h  ui_network.h  ui_topbar.h  ui_widgets.h
components/display/ui/: ui_audio.c  ui_audio.h  ui_bluetooth.c  ui_boot_animation.c  ui_boot_animation.h  ui_internal.h  ui_keyboard.c  ui_keyboard.h  ui_manager.c  ui_menu.c  ui_network.c  ui_topbar.c  ui_widgets.c
components/kernel/: CMakeLists.txt  PERMISSIONS.md  kernel.c  kernel_event.c  kernel_internal.h  kernel_memory.c  kernel_service.c  kernel_timer.c
components/kernel/include/kraken/: kernel.h
components/system/: CMakeLists.txt  system_service.c
components/system/include/kraken/: system_service.h
components/wifi/: CMakeLists.txt  wifi_service.c
components/wifi/include/kraken/: wifi_service.h
main/: CMakeLists.txt  kraken.c  wifi_wpa3_stub.c
